<resources>
    <string name="app_name">Smart City App</string>
    <string name="title">CommuniTide</string>
    <string name="subtitle">Discover new activities anytime, anywhere</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="Logout">Logout</string>
    <string name="searchActivity">Search for activities......</string>
    <string name="homeIcon">Home Icon</string>
    <string name="Home">Home</string>
    <string name="searchIcon">Search Icon</string>
    <string name="Search">Search</string>
    <string name="postIcon">Post Icon</string>
    <string name="Post">Post</string>
    <string name="likeIcon">Profile Icon</string>
    <string name="Like">Profile</string>
    <string name="infoIcon">Chats Icon</string>
    <string name="Info">Chats</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="postTitle">Post Title</string>
    <string name="postContent">Post Content</string>
    <string name="Likes">Likes</string>
    <string name="avatar">Avatar</string>
    <string name="profileAvatar">Profile Avatar</string>
    <string name="LikedPosts">Liked Posts</string>
    <string name="Email">Email</string>
    <string name="welcome">Welcome to profile</string>
    <string name="Sender">Sender</string>
    <string name="Message">Message</string>
    <string name="Timestamp">Timestamp</string>
    <string name="Type">Type a message</string>
    <string name="Send">Send</string>
    <string name="CreatePost">Create Post</string>
    <string name="EnterPostContent">Enter Post Content</string>
    <string name="Cancel">Cancel</string>
    <string name="EnterPostTitle">Enter Post Title</string>
    <string name="HoursAgo">2 hours ago</string>
    <string name="otherComments">Other comments</string>
    <string name="Back">Back</string>
    <string name="Comment">Comment</string>
    <string name="Details">Details</string>
    <string name="EnterComment">Enter Comment</string>
</resources>