<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- author: Xuefei Luan， Ziang Wang -->

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="41dp"
        android:layout_height="38dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="0dp"
        android:layout_height="19dp"
        android:layout_marginStart="8dp"
        android:text="@string/Username"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/postTitle"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="8dp"
        android:text="@string/postTitle"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/userName" />

    <TextView
        android:id="@+id/postContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/postContent"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTitle" />

    <!-- New TextView for Timestamp -->
    <TextView
        android:id="@+id/postTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/HoursAgo"
        android:textColor="#888888"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postContent" />

    <TextView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:text="@string/Likes"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTime" />


    <Button
        android:id="@+id/thumbup"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginEnd="110dp"
        android:backgroundTint="#FFFFFF"
        android:textColor="#FF0000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTime" />

    <Button
        android:id="@+id/commentButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/Comment"
        android:textColor="#000000"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/postTime" />

</androidx.constraintlayout.widget.ConstraintLayout>
