<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".P2P.Chat">

    <!-- @author: Ziang Wang -->

    <!-- Top Button Logo -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!-- Message List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUsers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    <!-- Input Message Box and Send Button -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:hint="@string/Type" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="#ECECEC"
            android:textColor="#FF0000"
            android:text="@string/Send" />
    </LinearLayout>



    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/homeIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:contentDescription="@string/homeIcon"
                android:src="@drawable/home" />

            <!-- Home Button -->
            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Home"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/postIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:contentDescription="@string/postIcon"
                android:src="@drawable/post" />

            <!-- Post Button -->
            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Post"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/infoIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:contentDescription="@string/infoIcon"
                android:src="@drawable/info_red" />

            <!-- Info Button -->
            <Button
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Info"
                android:textColor="#FF0000"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/meIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:contentDescription="@string/likeIcon"
                android:src="@drawable/me" />

            <!-- Like Button -->
            <Button
                android:id="@+id/btnLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Like"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#FF0000"
        android:text="@string/Back"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>