<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">

    <!-- @author: Ziang Wang -->

    <!-- Top Button Logo -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/title"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Search Box with Button -->
    <LinearLayout
        android:id="@+id/searchSection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_percent="0.92">

        <!-- Search Box -->
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:autofillHints=""
            android:background="@drawable/edit_text_background"
            android:hint="@string/searchActivity"
            android:inputType="text"
            android:padding="12dp"
            android:textColorHint="#A3A3A3"
            android:textSize="16sp" />

        <!-- Search Button -->
        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:backgroundTint="#FF0000"
            android:text="@string/Search"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>

    <!-- RecyclerView for Displaying Activities -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="6dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchSection" />

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottomNav"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#FFFFFF"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/homeIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:contentDescription="@string/homeIcon"
                android:src="@drawable/home_red" />

            <!-- Home Button -->
            <Button
                android:id="@+id/btnHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Home"
                android:textColor="#FF0000"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/postIcon"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_gravity="center"
                android:contentDescription="@string/postIcon"
                android:src="@drawable/post" />

            <!-- Post Button -->
            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Post"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>


        <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <!-- Icon -->
            <ImageView
                android:id="@+id/infoIcon"
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:contentDescription="@string/infoIcon"
                android:src="@drawable/info" />

        <!-- Info Button -->
            <Button
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Info"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Icon -->
            <ImageView
                android:id="@+id/meIcon"
                android:layout_width="28dp"
                android:layout_height="26dp"
                android:layout_gravity="center"
                android:contentDescription="@string/likeIcon"
                android:src="@drawable/me" />

            <!-- Like Button -->
            <Button
                android:id="@+id/btnLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FFFFFF"
                android:paddingTop="0dp"
                android:text="@string/Like"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCreatePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF0000"
        android:text="@string/CreatePost"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912" />

</androidx.constraintlayout.widget.ConstraintLayout>
